--- a/static/css/login.less
+++ b/static/css/login.less
@@ -164,6 +164,8 @@ a, button{
   text-align: center;
   background-color: #f7f7f7;
   color: #666666;
+  position: fixed;
+  bottom: 0;
   span{
     margin: 20px;
   }
