--- a/static/css/login.css
+++ b/static/css/login.css
@@ -164,6 +164,8 @@ button {
   text-align: center;
   background-color: #f7f7f7;
   color: #666666;
+  position: fixed;
+  bottom: 0;
 }
 .footer span {
   margin: 20px;
